# PyPWA

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.mg  CHANGES.txt  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  README.md  README.txt  TODO.txt  __init__.py  anaconda-environment.yml  dev-environment.yml  helper  setup.cfg  setup.py
PyPWA/: __init__.py  config.py  iminuit.py  info.py  minuit.py
TO BE SORTED/: asciiWriting.py  batchSimulator.py  fnGenerator2.py  gampComparison.py  hypotheticalIntensity.py  likelihoodTest.py  likelihoodValueTest.py  phaseMotion.py  plotI.py  plotNTruee.py  runNTrue.py  runNormalizationIntegral.py  runSimNTrue.py  threadTesting.py
Xeon Phi/: AMP.F  Igor_Prac.c  Igor_Prac.h  Igor_Read.c  a.out  ktmodel.mod
dataTypes/: gampParticle.py
doc/: Makefile
docs/: Makefile  README.txt  conf.py  data.rst  doc_env.yml  general-fitting.rst  index.rst  installing.rst  isobar-fitting-tutorial.rst  isobar-simulation-tutorial.rst  multiprocessing.rst  requirements.txt  user-docs.rst  utilities.rst
fileHandlers/: gampTranslator.py
generalShell/: FnTemplate.py  generalShell.py
limbo/: setup.py
micAMP/: AMP.F  CMakeLists.txt  README  fitterMIC.py  micAmp.cpp
micAMP/templates/: fitterMIC.py
model/: __init__.py  getPhi.py  nTrue.py  normInt.py  prodAmp.py
oldFileVersions/: ACCEPT.py  MCdir.py  acceptanceFilter_farm.py  generateAlphas.py  hypotheticalIntensityFitter.py  pfFilter.py  subCalcIlist.py  threadedSimulation.py  walkingNTrue.py
pyCore/: __init__.py
(+1179 files in other folders)
